--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,9 @@
 	- Youtube Video Backgrounds
 
 ---------------------------------------------------------------- */
-
+.container .clearfix{
+	margin: auto;
+}
 
 
 /* ----------------------------------------------------------------
