shifted margin for career page

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@
 ---------------------------------------------------------------- */
 .container .clearfix{
 	margin: auto;
+	float: inherit;
 }
 
 
