--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@
 	- Youtube Video Backgrounds
 
 ---------------------------------------------------------------- */
-.container .clearfix{
+.col_three_fifth .nobottommargin{
 	margin: auto;
 	float: inherit;
 }
