--- a/css/style.css
+++ b/css/style.css
@@ -88,11 +88,11 @@
 	- Youtube Video Backgrounds
 
 ---------------------------------------------------------------- */
-.col_three_fifth .nobottommargin{
+/*.col_three_fifth .nobottommargin{
 	margin: auto;
 	float: inherit;
 }
-
+*/
 
 /* ----------------------------------------------------------------
 	Basic
