Alright guys I actually centered it this time

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@
 ---------------------------------------------------------------- */
 #centered-application{
 	margin: auto;
+	float: inherit;
 }
 
 
